fix tiptap editor spacing issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -305,6 +305,14 @@
   .tiptap p {
     @apply text-[1.4rem] break-words;
   }
+  
+  .tiptap p:empty {
+    @apply mb-4;
+  }
+  
+  .tiptap p:not(:empty) + p:not(:empty) {
+    @apply mt-6;
+  }
 
   .tiptap pre {
     @apply bg-[var(--black)] text-[var(--white)] font-['JetBrainsMono',_monospace] my-6 px-4 py-3 break-words;
